New directory structure and using Gulp for CSS/JS

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ permalink: /:year/:month/:title/
 
 # Build settings
 markdown: kramdown
+exclude: ['_assets', '_scripts', 'README.md']
 
 # Pagination
 paginate: 10
