--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
+    "@types/react-instantsearch-dom": "^6.3.0",
+    "algoliasearch": "^4.4.0",
+    "dotenv": "^8.2.0",
+    "gatsby-plugin-algolia": "^0.11.2",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-transformer-remark": "^2.8.28",
     "prettier": "2.0.5",
+    "react-instantsearch-dom": "^6.7.0",
     "sass": "^1.26.10",
     "typescript": "^3.9.7"
   },
